<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fragments.CreateBattleFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/loginLogoCardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/linearLayout2">
        <TextView
                android:text="@string/new_battle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginAppName"
                android:textSize="34sp"
                android:background="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/userNameLoginEditText"
                android:textColor="@color/white"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"/>
        <EditText
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:hint="@string/username"
                android:textColorHint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:padding="20dp"
                android:drawableStart="@mipmap/ic_launcher"
                android:drawablePadding="20dp"
                android:id="@+id/userNameEditText"
                tools:ignore="SpeakableTextPresentCheck"
                android:minHeight="48dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:hint="@string/punishment"
                android:ems="10"
                android:id="@+id/punishmentEditTextTextMultiLine"
                android:minHeight="48dp"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:id="@+id/createBattleButton"
        />
    </LinearLayout>

</FrameLayout>