<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/background"
		tools:context=".fragments.UserBattleInfoFragment">
	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/refreshLayoutUserBattleInfoFragment">
		<ScrollView
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
			<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/scoreConstraintLayout">
				<TextView
						android:id="@+id/brandTextView"
						android:text="@string/brand"
						android:textAlignment="center"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintBottom_toTopOf="@+id/punishmentTextView"
						android:textSize="34sp"
						android:textColor="@color/main"
						android:fontFamily="@font/main"
						android:layout_margin="10dp"
				/>
				<TextView
						android:id="@+id/punishmentTextView"
						android:text="@string/punishment"
						android:textAlignment="center"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:layout_constraintTop_toBottomOf="@id/brandTextView"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintBottom_toTopOf="@+id/userScore1TextView"
						android:textSize="34sp"
						android:textColor="@color/main"
						android:fontFamily="@font/main"
						android:layout_margin="10dp"
				/>
				<TextView
						android:id="@+id/userScore1TextView"
						android:text="0"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						app:layout_constraintTop_toBottomOf="@+id/punishmentTextView"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintEnd_toStartOf="@+id/doubleDotsTextView"
						android:textSize="144sp"
						android:textColor="@color/main"
						android:fontFamily="@font/main"
				/>
				<TextView
						android:id="@+id/doubleDotsTextView"
						android:text=":"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						app:layout_constraintTop_toBottomOf="@+id/punishmentTextView"
						app:layout_constraintStart_toEndOf="@+id/userScore1TextView"
						app:layout_constraintEnd_toStartOf="@+id/userScore2TextView"
						android:textSize="144sp"
						android:textColor="@color/main"
						android:fontFamily="@font/main"
				/>
				<TextView
						android:id="@+id/userScore2TextView"
						android:text="0"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						app:layout_constraintTop_toBottomOf="@+id/punishmentTextView"
						app:layout_constraintStart_toEndOf="@+id/doubleDotsTextView"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintBottom_toTopOf="@+id/userName2TextView"
						android:textSize="144sp"
						android:textColor="@color/main"
						android:fontFamily="@font/main"
				/>
				<TextView
						android:id="@+id/userName1TextView"
						android:text="@string/you"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						app:layout_constraintTop_toBottomOf="@+id/userScore1TextView"
						app:layout_constraintStart_toStartOf="@+id/userScore1TextView"
						app:layout_constraintEnd_toEndOf="@+id/userScore1TextView"
						android:textSize="34sp"
						android:textColor="@color/main"
						android:fontFamily="@font/main"
				/>
				<TextView
						android:id="@+id/userName2TextView"
						android:text="@string/opponent"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						app:layout_constraintTop_toBottomOf="@+id/userScore2TextView"
						app:layout_constraintStart_toStartOf="@+id/userScore2TextView"
						app:layout_constraintEnd_toEndOf="@+id/userScore2TextView"
						android:textSize="34sp"
						android:textColor="@color/main"
						android:fontFamily="@font/main"
				/>
				<androidx.cardview.widget.CardView
						android:layout_width="300dp"
						android:layout_height="300dp"
						app:cardCornerRadius="180dp"
						android:elevation="12dp"
						android:layout_margin="10dp"
						android:id="@+id/plusCardView"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/userName1TextView"
						app:layout_constraintBottom_toTopOf="@+id/finishBattleButton"
				>
					<ImageView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:background="@color/main"
							android:scaleType="centerCrop"
							app:srcCompat="@drawable/plus_battle"
							android:contentDescription="@string/plus"/>
				</androidx.cardview.widget.CardView>
				<androidx.appcompat.widget.AppCompatButton

						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/finishBattleButton"
						android:background="@drawable/button_view"
						android:text="@string/finish"
						android:textSize="20sp"
						android:textColor="@color/main"
						android:padding="10dp"
						android:layout_margin="5dp"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/plusCardView"
				/>
			</androidx.constraintlayout.widget.ConstraintLayout>
		</ScrollView>
	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</FrameLayout>