<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/background"
		tools:context=".activities.LoginActivity">
	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<androidx.cardview.widget.CardView
				android:layout_width="200dp"
				android:layout_height="200dp"
				app:cardCornerRadius="180dp"
				android:elevation="12dp"
				android:layout_margin="10dp"
				android:id="@+id/registryLogoCardView"
				android:layout_centerHorizontal="true"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toTopOf="@+id/userRegistryLinearLayout2">
		<ImageView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/card_view_border_logo"
				android:scaleType="centerCrop"
				android:src="@mipmap/ic_launcher_foreground"/>
		</androidx.cardview.widget.CardView>
		<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@+id/registryLogoCardView"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				android:layout_marginStart="10dp"
				android:layout_marginEnd="10dp"
				android:background="@drawable/main_background"
				android:id="@+id/userRegistryLinearLayout2">
			<TextView
					android:text="@string/log_in"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/loginAppName"
					android:textSize="34sp"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintBottom_toTopOf="@+id/userNameLoginEditText"
					android:textColor="@color/main"
					android:fontFamily="@font/main"
					android:padding="10dp"
					android:layout_marginTop="10dp"
					android:layout_marginStart="10dp"
					android:layout_marginEnd="10dp"
					android:textAlignment="center"/>
			<EditText
					android:textColor="@color/main"
					android:backgroundTint="@color/main"
					android:fontFamily="@font/main"
					android:hint="@string/username"
					android:textColorHint="@color/main"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPersonName"
					android:layout_marginStart="10dp"
					android:layout_marginEnd="10dp"
					android:layout_marginBottom="10dp"
					android:padding="20dp"
					android:drawableStart="@drawable/user_login_logo"
					android:drawablePadding="20dp"
					android:id="@+id/userNameLoginEditText"
					tools:ignore="SpeakableTextPresentCheck"
					android:minHeight="48dp"/>
			<EditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:drawableStart="@drawable/password_logo"
					android:drawablePadding="20dp"
					android:inputType="textPassword"
					android:layout_marginStart="10dp"
					android:padding="20dp"
					android:layout_marginEnd="10dp"
					android:id="@+id/passwordLoginEditText"
					android:minHeight="48dp"
					android:textColor="@color/main"
					android:fontFamily="@font/main"
					android:hint="@string/password"
					android:textColorHint="@color/main"
					android:backgroundTint="@color/main"
					tools:ignore="SpeakableTextPresentCheck"/>
			<androidx.appcompat.widget.AppCompatButton
					android:text="@string/log_in"
					android:fontFamily="@font/main"
					android:textColor="@color/main"
					android:textSize="24sp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/loginUserLoginButton"
					android:background="@drawable/button_view"
					android:layout_margin="10dp"
			/>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="10dp"
					android:textSize="20sp"
					android:fontFamily="@font/main"
					android:textColor="@color/main"
					android:gravity="center"
					android:text="@string/no_register_yet"
					android:id="@+id/loginRegisterTextView"
			/>

		</LinearLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>