<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:background="@color/background"
		tools:context=".fragments.BattleInfoFragment"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/refreshLayoutBattleInfoFragment">
	<ScrollView
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/scoreConstraintLayout">
		<TextView
				android:id="@+id/brandTextView"
				android:text="@string/brand"
				android:textAlignment="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toTopOf="@+id/punishmentTextView"
				android:textSize="34sp"
				android:textColor="@color/main"
				android:fontFamily="@font/main"
				android:layout_margin="10dp"
		/>
		<TextView
				android:id="@+id/punishmentTextView"
				android:text="@string/punishment"
				android:textAlignment="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@id/brandTextView"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toTopOf="@+id/userScore1TextView"
				android:textSize="34sp"
				android:textColor="@color/main"
				android:fontFamily="@font/main"
				android:layout_margin="10dp"
		/>
		<TextView
				android:id="@+id/userScore1TextView"
				android:text="0"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@+id/punishmentTextView"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/doubleDotsTextView"
				android:textSize="144sp"
				android:textColor="@color/main"
				android:fontFamily="@font/main"
		/>
		<TextView
				android:id="@+id/doubleDotsTextView"
				android:text=":"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@+id/punishmentTextView"
				app:layout_constraintStart_toEndOf="@+id/userScore1TextView"
				app:layout_constraintEnd_toStartOf="@+id/userScore2TextView"
				android:textSize="144sp"
				android:textColor="@color/main"
				android:fontFamily="@font/main"
		/>
		<TextView
				android:id="@+id/userScore2TextView"
				android:text="0"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@+id/punishmentTextView"
				app:layout_constraintStart_toEndOf="@+id/doubleDotsTextView"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toTopOf="@+id/userName2TextView"
				android:textSize="144sp"
				android:textColor="@color/main"
				android:fontFamily="@font/main"
		/>
		<TextView
				android:id="@+id/userName1TextView"
				android:text="@string/you"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@+id/userScore1TextView"
				app:layout_constraintStart_toStartOf="@+id/userScore1TextView"
				app:layout_constraintEnd_toEndOf="@+id/userScore1TextView"
				app:layout_constraintBottom_toBottomOf="parent"
				android:textSize="34sp"
				android:textColor="@color/main"
				android:fontFamily="@font/main"
		/>
		<TextView
				android:id="@+id/userName2TextView"
				android:text="@string/opponent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@+id/userScore2TextView"
				app:layout_constraintStart_toStartOf="@+id/userScore2TextView"
				app:layout_constraintEnd_toEndOf="@+id/userScore2TextView"
				app:layout_constraintBottom_toBottomOf="parent"
				android:textSize="34sp"
				android:textColor="@color/main"
				android:fontFamily="@font/main"
		/>
	</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>
	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</FrameLayout>