<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/background"
		tools:context=".activities.RankTableActivity">
	<androidx.appcompat.widget.Toolbar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/black"
			android:theme="?attr/actionBarTheme"
			android:minHeight="?attr/actionBarSize"
			android:id="@+id/toolbar"
			android:backgroundTint="@color/main"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/refreshLayout">
		<ImageButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="start"
				android:backgroundTint="@color/main"
				android:src="@drawable/back"
				android:id="@+id/backImageButton"/>
	</androidx.appcompat.widget.Toolbar>
	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
			android:id="@+id/refreshLayoutRankTableActivity"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@id/toolbar">
		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/rankConstraintLayout">
			<TableLayout
					android:id="@+id/rankColumnTableRow"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:stretchColumns="*"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintBottom_toTopOf="@+id/rankList">
				<TableRow
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="@color/background"
				>
					<TextView
							android:text="@string/top"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textSize="24sp"
							android:textColor="@color/main"
							android:fontFamily="@font/main"
							android:padding="10dp"
							android:layout_column="1" />
					<TextView
							android:text="@string/username"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textColor="@color/main"
							android:fontFamily="@font/main"
							android:textSize="24sp"
							android:layout_column="2" />
					<TextView
							android:text="@string/score"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textColor="@color/main"
							android:fontFamily="@font/main"
							android:textSize="24sp"
							android:layout_column="3" />
				</TableRow>
			</TableLayout>
			<androidx.recyclerview.widget.RecyclerView
					android:layout_width="0dp"
					android:layout_height="0dp"
					android:id="@+id/rankList"
					app:layout_constraintTop_toBottomOf="@+id/rankColumnTableRow"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"/>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>